# MONOPOLY-project

./: .gitignore  APPUNTI.txt  Board.cpp  Board.h  CMakeLists.txt  Casella.cpp  Casella.h  Dadi.cpp  Dadi.h  Logger.cpp  Logger.h  Posizione.cpp  Posizione.h  README.md  Test-Dadi.cpp  main.cpp
include/: Board.h  Casella.h  Dadi.h  Game.h  Logger.h  Player.h  Posizione.h
src/: Board.cpp  Casella.cpp  Dadi.cpp  Game.cpp  Game.h  Logger.cpp  MainTest.cpp  Monopoly.cpp  Player.cpp  Posizione.cpp
